--- a/dapa.css
+++ b/dapa.css
@@ -1,6 +1,6 @@
 h1 {text-align: center;} 
-	h1 {color:"white";} 
-	p {color:"white";} 
-	ul {color:"white";} 
+	h1 {color:lime;} 
+	p {color:blue;} 
+	ul {color:green;} 
 	ul {font-size: 20px} 
 	body {background-color:"grey"} 
